--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Svitlana Zaster Portfolio</title>
+    <title>Svitlana Zaster's Portfolio</title>
     <link
             rel="stylesheet"
             href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
             integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
             crossorigin="anonymous"
         />
-<!-- MY CSS WILL GO BELOW THIS LINE -->
-<link rel="stylesheet" href="style.css" />
+<!-- CSS reference -->
+<link rel="stylesheet" href="cssFolder/.style.css" />
 
 </head>
 
@@ -22,9 +22,11 @@
 
     <!--<h1 class='masthead-heading'>Svitlana Zaster's Portfolio.</h1> !-->
     <section class="details">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">   -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-success"> 
+        <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light"> -->
         <a class="navbar-brand" href="#">Svitlana Zaster</a>
-        <p>I am learning to be a software developer</p>
+        <!-- <p>Aspiring to become a full stack web dev</p> -->
         <button
             class="navbar-toggler"
             type="button"
@@ -43,8 +45,7 @@
         >
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#"
-                        >Home <span class="sr-only">(current)</span></a
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a
                     >
                 </li>
                 <li class="nav-item">
