--- a/index.html
+++ b/index.html
@@ -6,28 +6,103 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Svitlana Zaster's Portfolio</title>
-    <link
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" >
+    <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css" >
+    <link rel="stylesheet" href="Assets/cssFolder/.style.css" />
+
+    <!-- Bootstrap stylesheet below -->
+    <!-- <link
             rel="stylesheet"
             href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
             integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
             crossorigin="anonymous"
-        />
+        /> -->
 <!-- CSS reference -->
-<link rel="stylesheet" href="cssFolder/.style.css" />
-
 </head>
 
 <body>
-  <header>
+  <!-- <div class = "header">
+ -->
+
+ <div id="mobile-menu-open" class="shadow-large">
+    <i class="fa fa-bars" aria-hidden="true"></i>
+</div>
+
+<header>
+
+    <div id="mobile-menu-close">
+        <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
+    </div>
+    <ul id="menu" class="shadow">
+        <li>
+            <a href="#about">About</a>
+        </li>
+        <li>
+            <a href="#experience">Experience</a>
+        </li>
+        <li>
+            <a href="#education">Education</a>
+        </li>
+        <li>
+            <a href="#projects">Projects</a>
+        </li>
+        <li>
+            <a href="#skills">Skills</a>
+        </li>
+        <li>
+            <a href="#contact">Contact</a>
+        </li>
+    </ul>
+</header>
+
+<div id="lead">
+    <div id="lead-content">
+        <h1>Svitlana Zaster</h1>
+        <h2>Software Engineer</h2>
+        <a href="#" class="btn-rounded-white">Download Resume</a>
+    </div>
+    <!-- End #lead-content -->
+
+    <div id="lead-overlay"></div>
+
+    <div id="lead-down">
+        <span>
+            <i class="fa fa-chevron-down" aria-hidden="true"></i>
+        </span>
+    </div>
+    <!-- End #lead-down -->
+</div>
+<!-- End #lead -->
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <!--<h1 class='masthead-heading'>Svitlana Zaster's Portfolio.</h1> !-->
-    <section class="details">
+    <!-- <section class="details"> -->
         <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">   -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-success"> 
+        <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-success">  -->
         <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light"> -->
-        <a class="navbar-brand" href="#">Svitlana Zaster</a>
+        <!-- <a class="navbar-brand" href="#">Svitlana Zaster</a> -->
+
+
         <!-- <p>Aspiring to become a full stack web dev</p> -->
-        <button
+        
+        <!-- <button
             class="navbar-toggler"
             type="button"
             data-toggle="collapse"
@@ -38,7 +113,91 @@
         >
             <span class="navbar-toggler-icon"></span>
         </button>
+ -->
 
+
+        <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+        aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button> -->
+
+
+<!-- Collect the nav links, forms, and other content for toggling -->
+<!-- <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+  <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+    <li class="nav-item">
+      <a class="nav-link" href="contact.html">Contact</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="portfolio.html">Portfolio</a>
+    </li>
+    <li class="nav-item active">
+      <a class="nav-link" href="index.html">About</a>
+    </li>
+  </ul>
+</div> -->
+<!-- /.navbar-collapse -->
+<!-- </div> -->
+<!-- /.container -->
+<!-- </nav> -->
+<!-- End of navbar -->
+
+<!-- Start of container -->
+<!-- <main class="container">
+<section class="row">
+<div class="col-md-8">
+  <article class="block">
+    <h1 class="block-header">About Me</h1>
+    <hr />
+    <img src="assets/imgs/natebeach.jpeg" alt="" id="about-image" />
+    <p>
+
+About me
+
+
+
+    </p>
+    <br />
+    <p>
+
+      About me
+
+
+    </p>
+  </article>
+</div>
+</section>
+</main> -->
+<!-- End of container -->
+
+Start of footer -->
+<footer class="footer">
+<div class="two-toned-footer-color"></div>
+<p class="text-muted text-muted-footer text-center">
+<!-- &copy; Copyright -->
+</p>
+</footer>
+<!-- End of footer
+
+<!-- jQuery CDN -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<!-- Bootstrap CDN -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+</body>
+
+</html>
+
+
+
+
+
+
+
+
+
+<!-- 
         <div
             class="collapse navbar-collapse"
             id="navbarSupportedContent"
@@ -119,4 +278,4 @@
 </body>
 
 </html>
-© 2020 GitHub, Inc.
+© 2020 GitHub, Inc. -->
