--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
             rel="stylesheet"
             href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
             integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-            crossorigin="anonymous"
-        />
+            <!-- crossorigin="anonymous" -->
+        />ß
 
-        
+        ÷
 </head>
 
 
-<body>
-  
+<!-- <body> -->
     <!-- <h1 class='masthead-heading'>Svitlana Zaster's Portfolio.</h1> ! -->
     <section class="details">
         <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">   -->
@@ -34,7 +33,7 @@
         
 
     <header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner"></header>
-        <button
+        <!-- <button
             class="navbar-toggler"
             type="button"
             data-toggle="collapse"
@@ -51,7 +50,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
         aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button>
+      </button> -->
 
 
     <!-- Collect the nav links, forms, and other content for toggling -->
