--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
           <hr />
           <div class="row">
             <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
+              <img class="img-fluid port-image" src="./Assets/Images/project1.png" alt="">
             </div>
             <div class="col-sm-6 col-md-12 col-lg-6">
               <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
@@ -70,11 +70,11 @@
               <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
             </div>
           </div>
-          <div class="row">
+          <!-- <div class="row">
             <div class="col-sm-6 col-md-12 col-lg-6">
               <img class="img-fluid port-image" src="https://via.placeholder.com/350x350" alt="">
             </div>
-          </div>
+          </div> -->
         </article>
       </div>
     </main>
@@ -85,7 +85,7 @@
   <footer class="footer">
     <div class="two-toned-footer-color"></div>
     <p class="text-muted text-muted-footer text-center">
-      &copy; Copyright 2018 Your Name
+      &copy; Copyright 2020 Svitlana Zaster
     </p>
   </footer>
   <!-- End of footer -->
